--- a/week3/firebase_todo/firebase_koajs/.gitignore
+++ b/week3/firebase_todo/firebase_koajs/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 firebase-debug.log*
 firebase-debug.*.log*
 
+functions/src/database/serviceAccount.example
 # Firebase cache
 .firebase/
 
